Fixed swagger Ui documentation
